# obs

./: .gitignore  .gitmodules  .tokeignore  CLAUDE.md  Cargo.toml  Makefile  README.md  README.zh-CN.md  _typos.toml  deny.toml  rustfmt.toml
apps/obs-cli/: Cargo.toml  build.rs
apps/obs-cli/src/: main.rs
apps/obs-cli/src/cmd/: audit.rs  completions.rs  decode.rs  diff.rs  doctor.rs  generate.rs  init.rs  lint.rs  migrate.rs  mod.rs  query.rs  scan.rs  schema.rs  schema_source.rs  tail.rs  validate.rs  version.rs
apps/obs-cli/tests/: cli_smoke.rs
apps/server/: Cargo.toml
apps/server-proto/: Cargo.toml  build.rs
apps/server-proto/src/: main.rs
apps/server/src/: main.rs
apps/soak/: Cargo.toml
apps/soak/src/: main.rs
crates/obs-build/: Cargo.toml  build.rs
crates/obs-build/src/: codegen.rs  config.rs  lib.rs  lints.rs  options.rs
crates/obs-build/tests/: codegen_files.rs
crates/obs-clickhouse/: Cargo.toml
crates/obs-clickhouse/src/: ddl.rs  lib.rs  sink.rs  transport.rs
crates/obs-core/: Cargo.toml
crates/obs-core/benches/: blake3_callsite.rs  emit_filtered.rs  emit_inmemory.rs  emit_ndjson.rs  emit_noop.rs  encode_payload.rs  registry_init.rs  registry_lookup.rs  scope_overhead.rs  scrub_for_log.rs  with_observer_poll.rs
crates/obs-core/fuzz/: Cargo.toml
crates/obs-core/fuzz/fuzz_targets/: scrub_payload.rs
crates/obs-core/src/: audit_spool.rs  callsite.rs  codegen_helpers.rs  config.rs  config_watcher.rs  emit.rs  filter.rs  forensic.rs  instrumented.rs  lib.rs  metric.rs  panic_hook.rs  propagator.rs  resource.rs  sampling.rs  self_event.rs  self_events.rs  span_trace.rs  test.rs
crates/obs-core/src/envelope/: builder.rs  mod.rs  projection.rs
crates/obs-core/src/observer/: in_memory.rs  mod.rs  noop.rs  standard.rs  workers.rs
crates/obs-core/src/registry/: arrow.rs  callsite_registry.rs  erased.rs  mod.rs  payload_decode.rs  scrubbed.rs  scrubber.rs
crates/obs-core/src/scope/: builder.rs  frame.rs  guard.rs  mod.rs
crates/obs-core/src/sink/: fanout.rs  in_memory.rs  mod.rs  ndjson.rs  noop.rs  stdout.rs  writer.rs
crates/obs-core/src/wire/: envelope_codec.rs  fields.rs  mod.rs
crates/obs-core/tests/: end_to_end.rs  envfilter_oracle.rs  proptest_invariants.rs
crates/obs-kit/: Cargo.toml
crates/obs-kit/src/: init.rs  lib.rs  self_event_builder.rs
crates/obs-kit/tests/: multi_tenant.rs
crates/obs-kit/tests/dev_ergonomics/: main.rs  test_audit_spool_recovery.rs  test_compile_errors.rs  test_hot_reload.rs  test_in_memory_observer.rs  test_multi_tenant_observer.rs  test_no_observer_noop.rs  test_obs_test_attribute.rs  test_panic_hook.rs  test_parallel_tests.rs  test_quickstart_60s.rs  test_redaction_pipeline.rs  test_registry_init.rs  test_tracing_bridge.rs  test_worker_pool.rs
crates/obs-live-tail/: Cargo.toml
crates/obs-live-tail/src/: lib.rs
crates/obs-macros/: Cargo.toml
crates/obs-macros/src/: derive_event.rs  emit_macro.rs  forensic_macro.rs  include_schemas.rs  instrument_attr.rs  lib.rs  scope_macro.rs  test_attr.rs
crates/obs-macros/tests/: derive_event.rs  trybuild.rs
crates/obs-otel/: Cargo.toml
crates/obs-otel/src/: backpressure.rs  batch.rs  env_config.rs  grpc.rs  lib.rs  logs.rs  mapping.rs  metrics.rs  mock_collector.rs  sink.rs  traces.rs
crates/obs-otel/tests/: grpc_roundtrip.rs
crates/obs-parquet/: Cargo.toml
crates/obs-parquet/src/: event_columns.rs  lib.rs  model.rs  partition.rs  sink.rs  writer.rs
crates/obs-parquet/tests/: event_struct_roundtrip.rs  resource_columns_roundtrip.rs
crates/obs-prom/: Cargo.toml
crates/obs-prom/src/: accept.rs  config.rs  error.rs  lib.rs  registry.rs  render.rs  self_events.rs  series.rs  sink.rs
crates/obs-proto/: Cargo.toml  build.rs
crates/obs-proto/src/: ext.rs  lib.rs
crates/obs-proto/src/pb/: mod.rs  obs.runtime.v1.mod.rs  obs.runtime.v1.self_events.__view.rs  obs.runtime.v1.self_events.__view_oneof.rs  obs.runtime.v1.self_events.rs  obs.v1.builtin.__oneof.rs  obs.v1.builtin.__view.rs  obs.v1.builtin.rs  obs.v1.enums.__ext.rs  obs.v1.enums.rs  obs.v1.mod.rs  (+7 more)
crates/obs-sdk/: Cargo.toml
crates/obs-sdk/src/: init.rs  lib.rs
crates/obs-sdk/tests/: multi_tenant.rs
crates/obs-sink-batch/: Cargo.toml
crates/obs-sink-batch/src/: backend.rs  config.rs  lib.rs  self_events.rs  sink.rs  spool.rs
crates/obs-tower/: Cargo.toml
crates/obs-tower/src/: client.rs  lib.rs  propagator.rs  server.rs
crates/obs-tower/tests/: client.rs  dos.rs  scope.rs
crates/obs-tracing-bridge/: Cargo.toml
crates/obs-tracing-bridge/benches/: baseline.json  bridge_overhead.rs  callsite_id_compute.rs  interning_cold.rs  interning_warm.rs
crates/obs-tracing-bridge/src/: direction_a.rs  direction_b.rs  field_promotions.rs  interning.rs  lib.rs  prewarm.rs  redactor.rs  typed.rs
crates/obs-tracing-bridge/tests/: bridge_suite.rs
crates/obs-types/: Cargo.toml
crates/obs-types/src/: cardinality.rs  classification.rs  field_kind.rs  lib.rs  metric_kind.rs  sampling.rs  severity.rs  tier.rs
examples/batch-pipeline/: Cargo.toml  README.md  obs.yaml
examples/batch-pipeline/src/: main.rs
examples/forensic-and-spantrace/: Cargo.toml  README.md  obs.yaml
examples/forensic-and-spantrace/src/: main.rs
examples/http-service/: Cargo.toml  README.md  obs.yaml
examples/http-service/src/: main.rs
examples/interop-obs-host/: Cargo.toml  README.md  build.rs
examples/interop-obs-host/src/: main.rs  schema.rs
examples/interop-tracing-host/: Cargo.toml  README.md  build.rs
examples/interop-tracing-host/src/: main.rs  schema.rs
examples/multi-tenant/: Cargo.toml  README.md
examples/multi-tenant/src/: main.rs
examples/sinks-showcase/: .gitignore  Cargo.toml  README.md  build.rs
examples/sinks-showcase/src/: main.rs  schema.rs  sinks.rs
examples/todomvc/: .gitignore  Cargo.toml  README.md  build.rs
examples/todomvc/src/: handlers.rs  main.rs  schema.rs  store.rs
examples/tracing-migration/: Cargo.toml  README.md
examples/tracing-migration/src/: main.rs
examples/worker-pool/: Cargo.toml  README.md  obs.yaml
examples/worker-pool/src/: main.rs
(+107 files in other folders)
