[workspace]
members = ["crates/*", "apps/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Your Name <YourName@yourdomain.com>"]
edition = "2024"
rust-version = "1.95"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"

[workspace.metadata.obs]
event_prefix = "Obs"

[workspace.dependencies]
# core deps
anyhow = "1.0"
arc-swap = "1.7"
blake3 = { version = "1.5", default-features = false }
bytes = "1.7"
dashmap = "6.1"
linkme = "0.3"
once_cell = "1.20"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
smallvec = { version = "1.13", features = ["serde", "union"] }
thiserror = "2.0"
tokio = { version = "1.52", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
tracing = "0.1"
typed-builder = "0.23"

# proc-macro deps
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
heck = "0.5"

# buffa for proto encoding
buffa = { version = "0.4", default-features = false, features = ["std"] }
buffa-build = "0.4"
buffa-descriptor = "0.4"
buffa-reflect = "0.1"

# dev / test
criterion = { version = "0.8", features = ["html_reports"] }
trybuild = "1.0"

# workspace crates
obs-build = { path = "crates/obs-build", version = "0.1.0" }
obs-core = { path = "crates/obs-core", version = "0.1.0" }
obs-macros = { path = "crates/obs-macros", version = "0.1.0" }
obs-proto = { path = "crates/obs-proto", version = "0.1.0" }
obs-sdk = { path = "crates/obs-sdk", version = "0.1.0" }
obs-types = { path = "crates/obs-types", version = "0.1.0" }
