[workspace]
members = ["crates/*", "apps/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["Your Name <YourName@yourdomain.com>"]
edition = "2024"
rust-version = "1.95"
license = "MIT"
documentation = "https://docs.rs/"
repository = "https://github.com/TODO"
homepage = "https://github.com/TODO"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
missing_debug_implementations = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
indexing_slicing = "warn"

# Pedantic-clippy is gated by `make lint-strict`, which feeds a
# curated allow list from `scripts/pedantic-allows.txt`. The default
# `cargo clippy` run keeps the four denials above; the strict run
# adds pedantic minus the listed allows. Spec 90 § M4 / impl-plan 5.3.

[workspace.metadata.obs]
event_prefix = "Obs"

[workspace.dependencies]
# core deps
anyhow = "1.0"
clap = { version = "4.6", features = ["derive", "env"] }
clap_complete = "4.6"
arc-swap = "1.9"
blake3 = { version = "1.8", default-features = false }
bytes = "1.11"
dashmap = "6.1"
linkme = "0.3"
once_cell = "1.21"
parking_lot = "0.12"
pin-project-lite = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
smallvec = { version = "1.15", features = ["serde", "union"] }
thiserror = "2.0"
tokio = { version = "1.52", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "registry",
] }
tracing-log = "0.2"
typed-builder = "0.23"

# proc-macro deps
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
heck = "0.5"

# buffa for proto encoding
buffa = { version = "0.4", default-features = false, features = ["std"] }
notify = "8"
secrecy = { version = "0.10", features = ["serde"] }

# OTLP transport (Phase 6.2 / spec 93 P0-6).
opentelemetry-proto = { version = "0.31", default-features = false, features = [
  "gen-tonic",
  "trace",
  "logs",
  "metrics",
] }
opentelemetry = { version = "0.31", default-features = false, features = [
  "trace",
  "logs",
  "metrics",
] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = [
  "trace",
  "logs",
  "metrics",
] }
prost = "0.14"
tonic = { version = "0.14", default-features = false, features = [
  "channel",
  "transport",
  "tls-aws-lc",
  "tls-native-roots",
  "tls-webpki-roots",
  "router",
  "server",
] }
tonic-prost = "0.14"
buffa-build = "0.4"
buffa-descriptor = "0.4"
buffa-reflect = "0.1"

# Phase-4 analytics + middleware deps.
arrow-array = "58"
arrow-schema = "58"
arrow-ipc = "58"
parquet = { version = "58", default-features = false, features = [
  "arrow",
  "snap",
  "lz4",
] }
governor = { version = "0.10", default-features = false, features = ["std"] }
http = "1.4"
hyper = { version = "1.9", features = ["server", "client", "http1"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = [
  "tokio",
  "client-legacy",
  "server-auto",
] }
proptest = "1.11"
regex = "1.12"
tower = { version = "0.5", default-features = false, features = [
  "util",
  "make",
] }
tower-service = "0.3"

# dev / test
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.27"
trybuild = "1.0"

# workspace crates
obs-build = { path = "crates/obs-build", version = "0.1.0" }
obs-clickhouse = { path = "crates/obs-clickhouse", version = "0.1.0" }
obs-core = { path = "crates/obs-core", version = "0.1.0" }
obs-macros = { path = "crates/obs-macros", version = "0.1.0" }
obs-otel = { path = "crates/obs-otel", version = "0.1.0" }
obs-parquet = { path = "crates/obs-parquet", version = "0.1.0" }
obs-proto = { path = "crates/obs-proto", version = "0.1.0" }
obs-sdk = { path = "crates/obs-sdk", version = "0.1.0" }
obs-tower = { path = "crates/obs-tower", version = "0.1.0" }
obs-tracing-bridge = { path = "crates/obs-tracing-bridge", version = "0.1.0" }
obs-types = { path = "crates/obs-types", version = "0.1.0" }
