[package]
name = "obs-cli"
description = "The `obs` CLI: lint, validate, schema, codegen, query."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "obs"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
buffa = { workspace = true }
buffa-descriptor = { workspace = true }
buffa-reflect = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
obs-build = { workspace = true }
obs-core = { workspace = true }
obs-proto = { workspace = true }
obs-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
