[package]
name = "obs-cli"
description = "The `obs` CLI: lint, validate, schema, codegen, query."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
# Vendored protos at `proto/obs/v1/{options,enums}.proto` have to
# ship in the published tarball because `schema_source.rs` pulls
# them in via `include_str!`. The `build.rs` validates they stay in
# sync with the canonical `obs-proto/proto/obs/v1/` copies.
build = "build.rs"
include = [
    "src/**/*",
    "build.rs",
    "proto/**/*.proto",
    "tests/**/*.rs",
    "README.md",
    "LICENSE*",
]

[[bin]]
name = "obs"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
buffa = { workspace = true }
buffa-descriptor = { workspace = true }
buffa-reflect = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
obs-build = { workspace = true }
obs-clickhouse = { workspace = true }
obs-core = { workspace = true }
obs-parquet = { workspace = true }
obs-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
