[package]
name = "obs-server-proto"
description = "Demo binary that exercises the obs SDK proto-first authoring path end-to-end."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
buffa = { workspace = true }
obs-core = { workspace = true }
obs-sdk = { workspace = true }

[build-dependencies]
obs-build = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
