[package]
name = "obs-server"
description = "Demo binary that exercises the obs SDK end-to-end."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
# obs-core is a transitive dep of obs-kit; macro-generated code uses
# `::obs_core::__private::*` absolute paths, so we declare it directly
# until the macro learns to emit `::obs_sdk::__private::*` (Phase 2).
obs-core = { workspace = true }
obs-kit = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
