[package]
name = "obs-build"
description = "Build-time codegen helpers for the obs SDK; reads .proto via buffa-build + buffa-reflect."
categories = ["development-tools::build-utils"]
keywords = ["observability", "obs", "protobuf"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
# Vendored protos under `proto/obs/v1/{options,enums}.proto` must
# end up in the published tarball — `config.rs` pulls them in via
# `include_str!`. The `build.rs` keeps them in sync with the
# canonical copies in `obs-proto/proto/obs/v1/`.
build = "build.rs"
include = [
    "src/**/*",
    "build.rs",
    "proto/**/*.proto",
    "tests/**/*.rs",
    "README.md",
    "LICENSE*",
]

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
buffa = { workspace = true }
buffa-build = { workspace = true }
buffa-descriptor = { workspace = true }
buffa-reflect = { workspace = true }
heck = { workspace = true }
obs-types = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
