[package]
name = "obs-build"
description = "Build-time codegen helpers for the obs SDK; reads .proto via buffa-build + buffa-reflect."
categories = ["development-tools::build-utils"]
keywords = ["observability", "obs", "protobuf"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
# Vendored protos under `proto/obs/v1/{options,enums}.proto` must
# end up in the published tarball — `config.rs` pulls them in via
# `include_str!`. The `build.rs` keeps them in sync with the
# canonical copies in `obs-proto/proto/obs/v1/`.
build = "build.rs"
include = [
    "src/**/*",
    "build.rs",
    "proto/**/*.proto",
    "tests/**/*.rs",
    "README.md",
    "LICENSE*",
]

[dependencies]
anyhow = { workspace = true }
blake3 = { workspace = true }
buffa = { workspace = true }
buffa-build = { workspace = true }
buffa-descriptor = { workspace = true }
buffa-reflect = { workspace = true }
heck = { workspace = true }
# obs-types retired in Phase 3b; the seven enums now live on obs-proto.
# obs-build reasons about them at lint time and authors them as field
# types — adding obs-proto as a direct dep is safe because obs-proto's
# own build.rs uses buffa-build directly, not obs-build (no cycle).
obs-proto = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
