[package]
name = "obs-core"
description = "Runtime engine for the obs SDK: Observer, Sink, schema registry, sampling, config."
categories = ["development-tools"]
keywords = ["observability", "obs", "wide-events"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
arc-swap = { workspace = true }
blake3 = { workspace = true }
buffa = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
getrandom = { workspace = true }
governor = { workspace = true }
http = { workspace = true }
linkme = { workspace = true }
obs-proto = { workspace = true }
once_cell = { workspace = true }
notify = { workspace = true }
parking_lot = { workspace = true }
pin-project-lite = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
winnow = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
tracing = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
# Test ergonomics: in-memory observer helpers, `assert_emitted!` macro
# support. Cfg-only flag — no runtime cost in release builds because the
# items it gates are only used by tests.
test = []

[[bench]]
name = "emit_noop"
harness = false

[[bench]]
name = "scope_overhead"
harness = false

[[bench]]
name = "registry_lookup"
harness = false

[[bench]]
name = "scrub_for_log"
harness = false

[[bench]]
name = "blake3_callsite"
harness = false

[[bench]]
name = "encode_payload"
harness = false

[[bench]]
name = "emit_filtered"
harness = false

[[bench]]
name = "emit_inmemory"
harness = false

[[bench]]
name = "emit_ndjson"
harness = false

[[bench]]
name = "with_observer_poll"
harness = false

[[bench]]
name = "registry_init"
harness = false

[lints]
workspace = true
