[package]
name = "obs-macros"
description = "Procedural macros for the obs SDK: #[derive(Event)], emit!, scope!, instrument."
categories = ["development-tools"]
keywords = ["observability", "obs"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
blake3 = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
heck = { workspace = true }
obs-build = { workspace = true }
# obs-types retired in Phase 3b; the proc-macro reasons about enum
# vocabulary at derive time.
obs-proto = { workspace = true }

[dev-dependencies]
obs-core = { workspace = true }
obs-proto = { workspace = true }
buffa = { workspace = true }
serde_json = { workspace = true }
trybuild = { workspace = true }

[lints]
workspace = true
