[package]
name = "obs-parquet"
description = "Single-table Parquet/Arrow analytics sink for the obs SDK."
categories = ["development-tools"]
keywords = ["observability", "obs", "parquet", "arrow"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
arc-swap = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
blake3 = { workspace = true }
buffa = { workspace = true }
bytes = { workspace = true }
obs-core = { workspace = true }
obs-proto = { workspace = true }
obs-types = { workspace = true }
parking_lot = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
obs-core = { workspace = true, features = ["test"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }

[lints]
workspace = true
