[package]
name = "obs-sdk"
description = "Façade for the obs SDK; re-exports the everyday API."
categories = ["development-tools"]
keywords = ["observability", "obs"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["dev", "panic-hook"]
dev = []
panic-hook = []
test = ["obs-core/test"]

[dependencies]
obs-core = { workspace = true }
obs-macros = { workspace = true }
obs-proto = { workspace = true }
obs-types = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
obs-core = { workspace = true, features = ["test"] }
tokio = { workspace = true }

[[test]]
name = "dev_ergonomics"
path = "tests/dev_ergonomics/main.rs"
required-features = ["test"]

[lints]
workspace = true
