[package]
name = "obs-sdk"
description = "Façade for the obs SDK; re-exports the everyday API."
categories = ["development-tools"]
keywords = ["observability", "obs"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["dev", "panic-hook"]
dev = []
panic-hook = []
test = ["obs-core/test"]
clickhouse = ["dep:obs-clickhouse"]
parquet = ["dep:obs-parquet"]
tower = ["dep:obs-tower"]
tracing-bridge = ["dep:obs-tracing-bridge"]
otel = ["dep:obs-otel"]

[dependencies]
obs-clickhouse = { workspace = true, optional = true }
obs-core = { workspace = true }
obs-macros = { workspace = true }
obs-otel = { workspace = true, optional = true }
obs-parquet = { workspace = true, optional = true }
obs-proto = { workspace = true }
obs-tower = { workspace = true, optional = true }
obs-tracing-bridge = { workspace = true, optional = true }
obs-types = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
buffa = { workspace = true }
obs-clickhouse = { workspace = true }
obs-core = { workspace = true, features = ["test"] }
obs-otel = { workspace = true }
obs-parquet = { workspace = true }
obs-proto = { workspace = true }
obs-tower = { workspace = true }
obs-tracing-bridge = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[[test]]
name = "dev_ergonomics"
path = "tests/dev_ergonomics/main.rs"
required-features = ["test"]

[lints]
workspace = true
