[package]
name = "obs-tracing-bridge"
description = "Bidirectional bridge between `tracing` and the obs SDK."
categories = ["development-tools"]
keywords = ["observability", "obs", "tracing"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
blake3 = { workspace = true }
buffa = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
obs-core = { workspace = true }
obs-proto = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-core = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
buffa = { workspace = true }
bytes = { workspace = true }
criterion = { workspace = true }
obs-core = { workspace = true, features = ["test"] }
obs-proto = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "registry"] }

[lints]
workspace = true

[[bench]]
name = "bridge_overhead"
harness = false

[[bench]]
name = "interning_cold"
harness = false

[[bench]]
name = "interning_warm"
harness = false

[[bench]]
name = "callsite_id_compute"
harness = false
