[package]
name = "obs-example-batch-pipeline"
description = "Batch ETL pipeline that emits typed obs events to ParquetSink for downstream analytics."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
obs-core = { workspace = true }
obs-parquet = { workspace = true }
obs-sdk = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[lints]
workspace = true
