[package]
name = "obs-example-forensic-and-spantrace"
description = "Demonstrate obs::forensic! budget enforcement and obs::SpanTrace capture inside an error path."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
obs-core = { workspace = true }
obs-sdk = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
