[package]
name = "obs-example-http-service"
description = "Axum HTTP service that opens an obs scope per request, propagates W3C traceparent via obs-tower, and ships typed events to OTLP."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "macros", "json"] }
http = { workspace = true }
obs-core = { workspace = true }
obs-otel = { workspace = true }
obs-sdk = { workspace = true }
obs-tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "net"] }
tower = { workspace = true }

[lints]
workspace = true
