[package]
name = "obs-example-interop-obs-host"
description = "obs-first app that bridges 3rd-party tracing into the same obs pipeline."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
buffa = { workspace = true }
clap = { workspace = true }
obs-core = { workspace = true }
obs-kit = { workspace = true }
obs-tracing-bridge = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
obs-build = { workspace = true }

[lints]
workspace = true
