[package]
name = "obs-example-multi-tenant"
description = "Per-task observer routing for multi-tenant services."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
buffa = { workspace = true }
obs-core = { workspace = true }
obs-proto = { workspace = true }
obs-sdk = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
